[package]
name = "clonetree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
reflink-copy = "0.1"
ignore = "0.4"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.21"
criterion = "0.7"

[[bench]]
name = "clone_tree_bench"
harness = false
