[package]
name = "ctree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"

[dependencies]
clonetree = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
